--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "dependencies": {
         "@hot-loader/react-dom": "^17.0.1",
         "@types/react": "^17.0.43",
+        "@types/react-transition-group": "^4.4.4",
         "axios": "^0.26.1",
         "classnames": "^2.3.1",
         "clean-webpack-plugin": "^4.0.0-alpha.0",
@@ -34,6 +35,7 @@
         "react-dom": "^17.0.1",
         "react-hot-loader": "^4.13.0",
         "react-redux": "^7.2.8",
+        "react-transition-group": "^4.4.2",
         "redux": "^4.1.2",
         "redux-thunk": "^2.4.1",
         "style-loader": "^1.1.3",
