--- a/package.json
+++ b/package.json
@@ -48,5 +48,8 @@
         "webpack-dev-server": "^3.10.3",
         "webpack-hot-middleware": "^2.25.0",
         "webpack-node-externals": "^3.0.0"
+    },
+    "devDependencies": {
+        "@types/react-dom": "^18.0.0"
     }
 }
