--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
         "react-redux": "^7.2.8",
         "react-transition-group": "^4.4.2",
         "redux": "^4.1.2",
+        "redux-devtools-extension": "^2.13.9",
         "redux-thunk": "^2.4.1",
         "style-loader": "^1.1.3",
         "thunk": "^0.0.1",
