--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "dependencies": {
         "@hot-loader/react-dom": "^17.0.1",
         "@types/react": "^17.0.43",
+        "@types/react-router-dom": "^5.3.3",
         "@types/react-transition-group": "^4.4.4",
         "axios": "^0.26.1",
         "classnames": "^2.3.1",
@@ -35,6 +36,7 @@
         "react-dom": "^17.0.1",
         "react-hot-loader": "^4.13.0",
         "react-redux": "^7.2.8",
+        "react-router-dom": "^6.3.0",
         "react-transition-group": "^4.4.2",
         "redux": "^4.1.2",
         "redux-devtools-extension": "^2.13.9",
