--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "@types/react-dom": "^18.0.0",
         "@hot-loader/react-dom": "^17.0.1",
         "@types/react": "^17.0.43",
         "@types/react-router-dom": "^5.3.3",
@@ -52,8 +53,6 @@
         "webpack-dev-server": "^3.10.3",
         "webpack-hot-middleware": "^2.25.0",
         "webpack-node-externals": "^3.0.0"
-    },
-    "devDependencies": {
-        "@types/react-dom": "^18.0.0"
     }
+
 }
